--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -38,6 +38,7 @@
 
     "sign_up": "Sign Up",
     "successfully_created_account": "Successfully created account",
+    
     "please_verify_your_email": "Please Verify Your Email",
     "or_continue_with": "or continue with",
     "create_account": "Create Account",
@@ -56,6 +57,7 @@
     "change_language": "Change Language",
     "edit_profile": "Edit Profile",
     "edit_email": "Edit Email",
+    "edit_email_message": "Are you sure you want to change your email?",
     "change_password": "Change Password",
     "become_seller": "Become Seller",
     "logout": "Logout",
