--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -53,10 +53,10 @@
     "gg": "الطلبات",
 
     "edit_profile": "تعديل الملف الشخصي",
-    "edit_email": "تعديل البريد الالكتروني",
+    "change_email": "تغيير البريد الالكتروني",
     "edit_email_message": "هل انت متاكد من تغيير البريد الالكتروني؟",
     "change_password": "تغيير كلمة المرور",
-    "become_seller": "اصبح مبيع",
+    "become_seller": "اصبح بائع",
     "change_theme": "تغيير التصميم",
     "change_language": "تغيير اللغة",
     "logout": "تسجيل الخروج",
