--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,4 +1,9 @@
 {
+  "@@locale": "ar",
+  "appTitle": "متجر اونلاين",
+  "@appTitle": {
+    "description": "عنوان التطبيق"
+  },
     "hello": "مرحبا!...",
     "signin": "تسجيل الدخول",
     "signup": "تسجيل",
